@@ -37,7 +37,23 @@ web interface will break if changed from 3025 due to links being hardcoded.
 
 Note, need more port mappings.
 
-## Connecting
+## Testing
+
+### Running the service manually.
+
+Connecting to the container with another shell makes it possible to kill
+the java process and start a new manually in order to catch output.
+
+```./jre/bin/java -classpath lib/Startup.jar -Xmx256m -Xms128m -Djava.net.preferIPv4Stack=true -Djava.library.path=./bin -Djava.ext.dirs=./jre/lib/ext com.cyberpowersystems.ppbe.startup.Startup start```
+
+Indicates issues with finding the USB device:
+
+`
+...com.cyberpowersystems.utility.Logger     : ! listDeviceStatement.hasResults()
+...com.cyberpowersystems.utility.Logger     : Service.deviceMonitoring: deviceId still -1 after lookupPresentDeviceId
+`
+
+### Connecting to the container
 
 ```docker exec -it powermaster /bin/bash```
 
